--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 16px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    color: #7b838a;
+    color: #002347;
     overflow-x: hidden;
     margin: 0;
 }
@@ -11,7 +11,6 @@ body {
 a {
     text-decoration: none !important;
     background-color: transparent;
-    color: inherit;
 }
 
 .text_uppercase {
@@ -73,6 +72,21 @@ a {
     white-space: nowrap;
 }
 
+.brand {
+    width: 50px;
+    height: 50px;
+    fill: #fdc632;
+    margin-bottom: 5px;
+    
+}
+
+.brand_txt {
+    margin: -42.5px 0 0 60px ;
+    font-size: 32px;
+    color: inherit;
+    font-weight: bolder;
+    
+}
 .nav_list {
     display: flex !important;
     flex-basis: auto;
@@ -101,11 +115,11 @@ a {
     margin-right: 45px;
     box-sizing: border-box;
     list-style: none;
-    color: black;
 }
 
 .nav_li a {
     text-decoration: none;
+    color: inherit;
 
 }
 
@@ -114,17 +128,17 @@ a {
     transition: all 0.3s ease-in-out;
 }
 
+.active {
+    color: #fdc632;
+}
+
 .nav_link {
     color: #002347;
     padding: 0px;
     display: inline-block;
-
 }
 
-.active {
-    color: #fdc632;
-    ;
-}
+
 
 /* Home banner Css */
 
@@ -371,4 +385,38 @@ a {
 }
 .footer span {
     color: #fdc632;
+}
+
+.topic_header {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background:linear-gradient(0deg,rgba(0, 35, 71, 0.8), rgba(0, 35, 71, 0.8)), url(img/electronic.jpg);
+    width: 100%;
+    height: 500px;
+    background-size:cover;
+    text-align: center;
+     
+}
+.topic_container {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+}
+.topic_text {
+    position: relative;
+    z-index: 99;
+    top: 175px;
+    font-size: 42px;
+    margin: 0;
+}
+.topic_text_small {
+    position: relative;
+    z-index: 99;
+    top: 180px;
+    font-size: 22px;
 }
