--- a/style.css
+++ b/style.css
@@ -216,12 +216,13 @@ a {
 .btn1 {
     border-radius: 5px;
     color: #fdc632;
-    border: 2px solid #002347;
+    
 }
 
 .btn1:hover {
     background-color: transparent;
     color: #002347;
+    border: 1px solid #002347;
 }
 
 .btn2 {
@@ -398,12 +399,18 @@ a {
     right: 0;
     top: 0;
     bottom: 0;
-    background:linear-gradient(0deg,rgba(0, 35, 71, 0.8), rgba(0, 35, 71, 0.8)), url(img/electronic.jpg);
     width: 100%;
     height: 500px;
-    background-size:cover;
     text-align: center;
      
+}
+.electronic {
+    background:linear-gradient(0deg,rgba(0, 35, 71, 0.8), rgba(0, 35, 71, 0.8)), url(img/electronic.jpg);
+    background-size:cover;
+}
+.organic {
+    background:linear-gradient(0deg,rgba(0, 35, 71, 0.8), rgba(0, 35, 71, 0.8)), url(img/organic.jpg);
+    background-size:cover;
 }
 .topic_box {
     display: flex;
@@ -439,6 +446,7 @@ a {
     flex-direction: column;
     margin-top: 70px;
     margin-left: 550px;
+    left: 100px;
 }
 
 .topic_cover {
@@ -525,6 +533,7 @@ a {
     flex-direction: column;
     margin-top: 70px;
     margin-right: 100px;
+    left: 100px;
 }
 
 .topic_details {
